# kilogramme-tbd

./: .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.example.toml  crates.js  docker-compose.yml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: build.yml  docs.yml
docs/: CONFIG.md  CONTRIB-COMMANDS.md  CONTRIBUTING.md  DOCKER.md
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/serde/de/: trait.Deserialize.js  trait.Visitor.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
kilogramme_tbd/: all.html  constant.BRANCHES.html  fn.async_main.html  fn.main.html  index.html  opaque..html  sidebar-items.js
kilogramme_tbd/config/: constant.FIELDS.html  enum.__Field.html  index.html  sidebar-items.js  struct.MongoConf.html  struct.Options.html  struct.TgConf.html  struct.UserBotConfig.html  struct.__FieldVisitor.html  struct.__Visitor.html
kilogramme_tbd/consts/: constant.BOT_CMD_FAIL.html  constant.BOT_READY.html  constant.CONFIG_FILE.html  constant.HELLO_TEXT.html  constant.LOG_FILE.html  constant.REPLY_WAIT_TIME.html  constant.SESSION_FILE.html  index.html  sidebar-items.js
kilogramme_tbd/consts/db/: constant.COLLECTION_NOTES.html  constant.COLLECTION_STICKERS.html  constant.DB_NAME.html  index.html  sidebar-items.js
kilogramme_tbd/errors/: enum.UserBotError.html  enum.UserBotInitError.html  index.html  sidebar-items.js
kilogramme_tbd/helpers/: index.html  sidebar-items.js
kilogramme_tbd/plugins/: index.html  sidebar-items.js
kilogramme_tbd/userbot/: fn.command_handler.html  index.html  opaque..html  sidebar-items.js  struct.UserBot.html  struct.UserBotStore.html  type.CommandHandlerResult.html
src/: config.rs  errors.rs  main.rs  userbot.rs
src/consts/: db.rs  info.rs  manage.rs  memes.rs  mod.rs  msgdel.rs  notes.rs  nsfw.rs  restrict.rs  stickers.rs  time.rs
src/helpers/: db.rs  image.rs  mod.rs  time.rs
src/kilogramme_tbd/: config.rs.html  errors.rs.html  main.rs.html  userbot.rs.html
src/plugins/: basic.rs  info.rs  manage.rs  memes.rs  mod.rs  msgdel.rs  notes.rs  restrict.rs  stickers.rs
trait.impl/lazy_static/: trait.LazyStatic.js
type.impl/std/: primitive.tuple.js
(+186 files in other folders)
